packages/front-end/styles/global.scss
/* ... */
.main.experiment {
  .experiment-header {
    margin: -4px -8px 0;
  }
  .experiment-tabs {
    position: sticky;
    top: 55px;
    height: 44px;
    margin: 0 -8px -3px;
    transition: 150ms all;
    .header-tabs {
      flex-wrap: nowrap;
      .date-dropdown {
        text-align: right;
        .dropdown-toggle {
          white-space: normal;
        }
        @media (max-width: 750px) {
          font-size: 10px;
          max-width: 140px;
        }
      }
      .users {
        text-align: right;
        @media (max-width: 750px) {
          font-size: 12px;
          margin-right: 0 !important;
          padding: 0 !important;
        }
        @media (max-width: 500px) {
          display: none;
        }
      }
    }
    &.pinned {
      z-index: 830;
      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
      .header-tabs {
        overflow: hidden;
      }
    }
  }
}

.experiment-results-wrapper {
  @media (max-width: 900px) {
    overflow-x: auto;
  }
}

.experiment-results {
  tbody {
    tr {
      box-shadow: rgba(102, 102, 102, 0.125) 0 -1px inset;
      &:not(.results-label-row) {
        td:not(.graph-cell):not(:last-child) {
          box-shadow: rgba(102, 102, 102, 0.125) -1px 0 inset;
        }
      }
    }
  }

  table-layout: fixed;
  width: 100%;
  th,
  td {
    padding: 0 10px;
  }
  th {
    vertical-align: bottom;
    &.axis-col {
      position: sticky;
      top: 95px;
      background-color: var(--surface-background-color);
      z-index: 800;
      box-shadow: 0 -1px 0 var(--text-link-hover-color) inset;
      @media (max-width: 900px) {
        position: static;
      }
      &.graph-cell {
        z-index: 801;
      }
      &.header-label {
        padding-bottom: 5px;
        font-size: 16px;
      }
      &.label {
        color: var(--text-link-hover-color);
        font-size: 13px;
        padding-bottom: 5px;
      }
    }
  }
  .value,
  .chance,
  .change {
    font-size: 14px;
    line-height: 16px;
  }
  .graph-cell {
    padding: 0;
    svg {
      overflow: initial;
    }
  }
  .metric-label {
    font-size: 14px;
  }
  .variation {
    font-size: 14px;
  }
  .result-number-sub,
  .plusminus {
    font-size: 12px;
    font-style: italic;
    white-space: nowrap;
  }
  .chance {
    .ok {
      color: #55ab95;
    }
    .warning {
      color: #d99132;
    }
    .danger {
      color: #d94032;
    }
  }
  .results-change {
    font-size: 12px;
    .ci {
      font-weight: normal;
    }
  }
  .draw,
  .non-significant {
    //font-weight: normal;
    //color: #707070;
    //&.hover {
    //  color: #888888;
    //}
  }
  .won {
    color: #09ac17;
    font-weight: bold;

    &.results-ctw,
    &.results-pval {
      color: var(--alert-success-color);
      background: linear-gradient(-40deg, #09ac1730, #09ac1716);
    }
  }
  .lost {
    color: #ce3729;
    font-weight: bold;

    &.results-ctw,
    &.results-pval {
      color: var(--alert-danger-color);
      background: linear-gradient(-40deg, #ce372930, #ce372916);
    }
  }
  //&.draw {
  //  color: #8e51f1;
  //  &.hover {
  //    color: #7c2cfa;
  //  }
  //}
  .suspicious {
    color: #ef2bd5;
  }
  .hover {
    cursor: pointer;
    transition: 100ms all;
  }
  .visx-axis-left .visx-axis-line {
    // axis line has a 0.5 pixel offset. reverse it
    transform: translate(0.5px, -0.5px);
  }
}
main.main.report {
  .experiment-results {
    th {
      &.axis-col {
        top: 50px;
      }
    }
  }
}

.badge {
  line-height: 1em;
  font-size: 85.72%; //12px
  margin-bottom: 2px;
  font-weight: 700;
  .badge {
    margin-bottom: 0;
  }
}

.badge-red {
  @include badge-variant(colors.$red);
  border: 1px solid colors.$red;
}
.badge-green {
  @include badge-variant(colors.$green);
  border: 1px solid colors.$green;
}
.badge-primary {
  @include badge-variant(#00ace5);
  border: 1px solid rgba(23, 18, 33, 0.1);
}
.badge-gray {
  @include badge-variant(#f6f7f9);
  border: 1px solid colors.$gray4;
}
.badge-purple {
  background-color: var(--form-multivalue-background-color);
  color: var(--form-multivalue-text-color);
}
.badge-ellipsis {
  max-width: 250px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  &.short {
    max-width: 120px;
  }
}

.multi-select-container {
  z-index: 99999999;
}
.graybox {
  background-color: var(--surface-background-color-alt);
  padding: 15px 20px 20px;
  border-radius: 3px;
  border: 1px solid var(--border-color-300);
  label {
    font-weight: 600;
  }
}
.hover-highlight {
  transition: background-color 0.1s;
  &:hover {
    background-color: rgba(124, 69, 234, 0.06);
  }
}
.highlight {
  background-color: var(--table-row-highlight-background-color);
}

.experiment-switch-page {
  opacity: 0.6;
  transition: opacity 0.2s;
  width: auto;
  margin: 0 auto;
  pointer-events: all;

  &:hover {
    opacity: 1;
  }

  @media (max-width: 980px) {
    .give-feedback {
      display: none;
    }
  }
  @media (max-width: 700px) {
    .switch-back .text {
      display: none;
    }
  }
}

.hover-show {
  .show-target {
    transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
    opacity: 0;
  }
  &:hover {
    .show-target {
      opacity: 1;
    }
  }
}
.fade-hover {
  opacity: 0.5;
  transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
  &:hover {
    opacity: 1;
  }
}
.hover-underline {
  &:hover {
    text-decoration: underline;
  }
}
.modal {
  .modal-header {
    background-color: var(--surface-background-color-alt);
  }
  .rbt-token {
    background-color: rgba(colors.$highlight-purple, 0.1);
    color: colors.$highlight-purple;
    font-weight: 600;
  }
}
.modal-dialog.modal-fill {
  margin: 0 auto;
}
/* ... */

